# movie-reviews

./: .env  .env.template  .gitignore  Procfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
src/: app.py
src/backend/: app.py  utils.py
src/backend/data_analyzer/: __init__.py
src/backend/database/: dev.duckdb  utils.py
src/backend/healthcheck/: __init__.py
src/backend/kafka-mock/: __init__.py
src/backend/prometheus_metrics/: __init__.py
src/backend/task_scheduler/: update_database.py
src/backend/tmdb/: genres.py  movies.py
src/backend/tmdb_data_collector/: genres.py  movies.py
test/: integration_test.duckdb  integration_test.py  unit_test.duckdb
test/backend/data_analyzer/: test_build_query.py
test/backend/tmdb_data_collector/: test_genres.py  test_movies.py
