[tool.poetry]
name = "movie-reviews"
version = "0.1.0"
description = ""
authors = ["se7ensecondz <se7ensecondz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
duckdb = "1.0.0"
fastapi = "0.111.0"
requests = "2.32.3"
poetry-core = "1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
